AC_PREREQ([2.69])
AC_INIT([libx1000], [0.01], [ray.kinsella@intel.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/x1000_ldpreload.c])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

LT_INIT([shared])

AC_OUTPUT(Makefile src/Makefile)
